[tool.poetry]
name = "isaaclab-experiments"
version = "0.1.0"
description = ""
authors = ["gonzalesmk <judcnegri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
extraPaths = [
  "IsaacLab/source/isaaclab",
  "IsaacLab/source/isaaclab_tasks",
  "IsaacLab/source/isaaclab_rl",
  "IsaacLab/source/isaaclab_assets",
  "IsaacLab/source/isaaclab_mimic",
]
