[tool.poetry]
name = "isaaclab-experiments"
version = "0.1.0"
description = ""
authors = ["mthalves <matheus.moog@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
extraPaths = [
  "IsaacLab/source/isaaclab",
  "IsaacLab/source/isaaclab_tasks",
  "IsaacLab/source/isaaclab_rl",
  "IsaacLab/source/isaaclab_assets",
  "IsaacLab/source/isaaclab_mimic",
]
